--- a/flink-hashagg-datagens/pom.xml
+++ b/flink-hashagg-datagens/pom.xml
@@ -16,7 +16,7 @@
         <scala.tools.version>2.10</scala.tools.version>
 
         <!-- Flink -->
-        <flink.version>0.9.0</flink.version>
+        <flink.version>1.1-FLINK-3477</flink.version>
     </properties>
 
     <dependencies>
@@ -43,13 +43,13 @@
         <!-- Flink -->
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients</artifactId>
+            <artifactId>flink-clients_${scala.tools.version}</artifactId>
             <version>${flink.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-scala</artifactId>
+            <artifactId>flink-scala_${scala.tools.version}</artifactId>
             <version>${flink.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -106,13 +106,13 @@
                 <!-- Flink -->
                 <dependency>
                     <groupId>org.apache.flink</groupId>
-                    <artifactId>flink-clients</artifactId>
+                    <artifactId>flink-clients_${scala.tools.version}</artifactId>
                     <version>${flink.version}</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.flink</groupId>
-                    <artifactId>flink-scala</artifactId>
+                    <artifactId>flink-scala_${scala.tools.version}</artifactId>
                     <version>${flink.version}</version>
                     <scope>compile</scope>
                 </dependency>
