--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,33 @@
         </license>
     </licenses>
 
+    <developers>
+        <developer>
+            <name>Alexander Alexandrov</name>
+            <email>alexander.alexandrov@tu-berlin.de</email>
+            <organization>TU Berlin</organization>
+            <organizationUrl>https://www.tu-berlin.de</organizationUrl>
+        </developer>
+        <developer>
+            <name>Andreas Kunft</name>
+            <email>andreas.kunft@tu-berlin.de</email>
+            <organization>TU Berlin</organization>
+            <organizationUrl>https://www.tu-berlin.de</organizationUrl>
+        </developer>
+        <developer>
+            <name>Gábor Gévay</name>
+            <email>gevay@tu-berlin.de</email>
+            <organization>TU Berlin</organization>
+            <organizationUrl>https://www.tu-berlin.de</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:TU-Berlin-DIMA/flink-hashagg.git</connection>
+        <developerConnection>scm:git:git@github.com:TU-Berlin-DIMA/flink-hashagg.git</developerConnection>
+        <url>git@github.com:TU-Berlin-DIMA/flink-hashagg.git</url>
+    </scm>
+
     <properties>
         <!-- Common -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
