--- a/flink-hashagg-datagens/pom.xml
+++ b/flink-hashagg-datagens/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.tu_berlin.dima</groupId>
         <artifactId>flink-hashagg</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>flink-hashagg-datagens</artifactId>
